Fixes footer to page bottom to avoid whitespace beneath footer

--- a/redbuttegarden/redbuttegarden/static/css/rbg.css
+++ b/redbuttegarden/redbuttegarden/static/css/rbg.css
@@ -147,3 +147,8 @@ nav[role=pagination] {
     width: 385px;
     margin-top: 30px;
 }
+
+footer {
+    position: absolute;
+    width: 100%;
+}
